fix: navegacao entre paginas

--- a/docs/templates/navbar.html
+++ b/docs/templates/navbar.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page"href="/docs/index.html#header-section">Home</a>
+            <a class="nav-link" aria-current="page"href="index.html#header-section">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/docs/index.html#sobre-section">Sobre</a>
+            <a class="nav-link" href="index.html#sobre-section">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/docs/index.html#projetos-section">Projetos</a>
+            <a class="nav-link" href="index.html#projetos-section">Projetos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/docs/index.html#contato-section">Contato</a>
+            <a class="nav-link" href="index.html#contato-section">Contato</a>
           </li>
         </ul>
       </div>
