--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -223,7 +223,7 @@ color: #FFFFFF;
    
 
 #footer {
-    background-color: #2F11C4; 
+    background-color: #2B4369; 
     color: #fff; 
     text-align: right; 
     padding: 10px 30px 10px 30px;
